[metadata]
name = Collatz REPL
version = 0.0.1
author = Stijn de Vos
author_email = s.de.vos@rug.nl
description = A very simple REPL that prints and plots Collatz sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StijnDeVos/collatz_repl
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src